# ThermoReconLab

./: .gitignore  README.md  pyproject.toml
examples/: 01_synthetic_benchmark.py
src/thermoreconlab/: __init__.py  analysis.py  data.py  exceptions.py  experiments.py  reconstruction.py  sensors.py  visualization.py
src/thermoreconlab/core/: __init__.py  domain.py  fields.py  grid.py  operators.py
tests/: test_analysis.py  test_core_domain.py  test_core_fields.py  test_core_grid.py  test_core_operators.py  test_data.py  test_experiments.py  test_reconstruction.py  test_sensors.py  test_visualization.py
